--- a/graalvm-jit/Dockerfile_jit
+++ b/graalvm-jit/Dockerfile_jit
@@ -1,6 +1,6 @@
-#Uses graalvm jdk11 image
-FROM ghcr.io/graalvm/graalvm-ce:java11-21.2.0
+#Uses graalvm jdk17 image
+FROM ghcr.io/graalvm/graalvm-ce:ol9-java17-22.3.1
 
 COPY ../target/spring-graalvm-service.jar /home/service/spring-graalvm-service.jar
 
-CMD [ "opt/graalvm-ce-java11-21.2.0/bin/java", "-XX:+UnlockExperimentalVMOptions", "-XX:+EnableJVMCI", "-XX:+UseJVMCICompiler", "-jar", "/home/service/spring-graalvm-service.jar" ]
+CMD [ "/opt/graalvm-ce-java17-22.3.1/bin/java", "-XX:+UnlockExperimentalVMOptions", "-XX:+EnableJVMCI", "-XX:+UseJVMCICompiler", "-jar", "/home/service/spring-graalvm-service.jar" ]
